--- a/src/shrimp/makefile
+++ b/src/shrimp/makefile
@@ -6,6 +6,9 @@ SHELL:=bash
 PROJECT_NAME:=shrimp
 TARGET_DIR:=/home/onze/shrimp
 TARGET_HOST:=shrimp.local
+VENV_DIR:=/home/onze/tmp/${PROJECT_NAME}/venv
+
+PYTHON:=python3.9
 
 # only update sources
 .ONESHELL:
@@ -18,24 +21,23 @@ pushfiles:
 # also reinstall libs
 .ONESHELL:
 remotedeploy: pushfiles
-	ssh $(TARGET_HOST) "cd $(TARGET_DIR) && make localdeploy"
+	ssh -t $(TARGET_HOST) "cd $(TARGET_DIR) && make localdeploy"
 
 # initial setup. pretty long on the zero...
 .ONESHELL:
 localdeploy:
 	cd $(ROOT_DIR)
-	rm -rf /tmp/${PROJECT_NAME}/venv
-	python3 -m venv /tmp/${PROJECT_NAME}/venv
-	source /tmp/${PROJECT_NAME}/venv/bin/activate
+	rm -rf $(VENV_DIR)
+	$(PYTHON) -m venv $(VENV_DIR)
+	source $(VENV_DIR)/bin/activate
 	pip install -r ./ops/requirements.txt
 
 # push code and run it - dev loop
 .ONESHELL:
 remoterun: pushfiles
-	source /tmp/${PROJECT_NAME}/venv/bin/activate
-	ssh $(TARGET_HOST) "cd $(TARGET_DIR) && make localrun"
+	ssh -t $(TARGET_HOST) "cd $(TARGET_DIR) && make localrun"
 
 .ONESHELL:
 localrun:
-	source /tmp/${PROJECT_NAME}/venv/bin/activate
-	python3 main.py
+	source $(VENV_DIR)/bin/activate
+	python main.py
