--- a/src/station/config.shrimpstation.yaml
+++ b/src/station/config.shrimpstation.yaml
@@ -1,7 +1,7 @@
 tmp_dir: /tmp/shrimpstation
 server:
-  debug: true
-  hostname: onze-desktop.local
+  debug: false
+  hostname: shrimpstation.local
   port: 5000
   videofeed_port: 5001
   websocket:
@@ -9,5 +9,5 @@ server:
     enable_engine_logging: false
   subprocess_polling_period_ms: 1000
 shrimp:
-  hostname: onze-desktop.local
+  hostname: shrimp.local
   rest_api_port: 6000
