--- a/src/shrimp/ops/requirements.txt
+++ b/src/shrimp/ops/requirements.txt
@@ -4,5 +4,8 @@ pyyaml
 flask~=2.3.2
 flask-socketio
 python-socketio~=5.8.0
+python-socketio[client]
 simple-websocket~=0.10.1
 gpiozero~=1.6.2
+rpi.gpio~=0.7.1
+#pigpio~=1.78
