--- a/src/station/config.onze-desktop.yaml
+++ b/src/station/config.onze-desktop.yaml
@@ -10,4 +10,4 @@ server:
   subprocess_polling_period_ms: 1000
 shrimp:
   hostname: onze-desktop.local
-  rest_api_port: 6000
+  web_api_port: 6000
