--- a/src/station/config.onze-desktop.yaml
+++ b/src/station/config.onze-desktop.yaml
@@ -9,5 +9,6 @@ server:
     enable_engine_logging: false
   subprocess_polling_period_ms: 1000
 shrimp:
-  hostname: onze-desktop.local
+  hostname: shrimp.local
+#  hostname: onze-desktop.local
   web_api_port: 6000
